--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Library Management System</title>
-    <link rel="stylesheet" href="static/css/styles.css" />
-    
+    <title>Game System</title>
+    <link rel="stylesheet" href="styles.css" />
+   
   </head>
   <body>
     <div class="container">
@@ -15,35 +15,57 @@
           <input type="text" id="username" placeholder="Username" />
           <input type="password" id="password" placeholder="Password" />
           <button onclick="login()">Login</button>
-          <button onclick="register()">Register</button>
         </div>
       </div>
-
+ 
       <div id="main-section" class="hidden">
         <div class="header">
-          <h1>Library Management System</h1>
+          <h1>Game System</h1>
           <button onclick="logout()">Logout</button>
         </div>
-
-        <div class="books-section">
-          <h2>Add New Book</h2>
+ 
+        <div class="customers-section">
+          <h2>Register New Customer</h2>
           <div class="form-group">
-            <input type="text" id="book-title" placeholder="Title" />
-            <input type="text" id="book-author" placeholder="Author" />
-            <input type="text" id="book-year-published" placeholder="Year Published" />
-            <input type="text" id="book-type" placeholder="type" />
-            <button onclick="addBook()">Add Book</button>
+            <input type="text" id="customer-name" placeholder="Name" />
+            <input type="email" id="customer-email" placeholder="Email" />
+            <input type="tel" id="customer-phone" placeholder="Phone" />
+            <button onclick="addCustomer()">Add Customer</button>
           </div>
-
-          <h2>All Books</h2>
-          <div id="books-list" class="books-grid"></div>
-
-          <h2>Loaned Books</h2>
-          <div id="loaned-books-list" class="books-grid"></div>
+ 
+          <h2>All Customers</h2>
+          <div id="customers-list" class="customers-grid"></div>
+ 
+        </div>
+ 
+        <div class="games-section">
+          <h2>Add New Game</h2>
+          <div class="form-group">
+            <input type="text" id="game-title" placeholder="Title" />
+            <input type="text" id="game-genre" placeholder="Genre" />
+            <input type="text" id="game-price" placeholder="Price" />
+            <input type="text" id="game-quantity" placeholder="Quantity" />
+            <button onclick="addGame()">Add Game</button>
+          </div>
+ 
+          <h2>All Games</h2>
+          <div id="games-list" class="games-grid"></div>
+ 
+          <h2>Register New Loan</h2>
+          <div class="form-group">
+            <input type="number" id="game-id-loan" placeholder="GameIDLoan" />
+            <input type="number" id="customer-id-loan" placeholder="CustomerIDLoan" />
+            <input type="date" id="loan-date" placeholder="LoanDate" />
+            <input type="date" id="return-date" placeholder="ReturnDate" />
+            <button onclick="addLoan()">Add Game</button>
+          </div>
+ 
+          <h2>All Loaned Games</h2>
+          <div id="loaned-games-list" class="games-grid"></div>
         </div>
       </div>
     </div>
-    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script> 
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="script.js"></script>
   </body>
 </html>
