--- a/frontend/index.html
+++ b/frontend/index.html
@@ -18,6 +18,7 @@
         </div>
       </div>
  
+      
       <div id="main-section" class="hidden">
         <div class="header">
           <h1>Game System</h1>
@@ -57,11 +58,11 @@
             <input type="number" id="customer-id-loan" placeholder="CustomerIDLoan" />
             <input type="date" id="loan-date" placeholder="LoanDate" />
             <input type="date" id="return-date" placeholder="ReturnDate" />
-            <button onclick="addLoan()">Add Game</button>
+            <button onclick="addLoan()">Add Loan</button>
           </div>
  
           <h2>All Loaned Games</h2>
-          <div id="loaned-games-list" class="games-grid"></div>
+          <div id="loans-list" class="games-grid"></div>
         </div>
       </div>
     </div>
